zurguud nemeed barag bolson

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/765b2b84a9.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
@@ -83,13 +84,15 @@
       </div>
 <!-- packing section -->
       <div class="section d">
-      <p class="grey small">PRICING</p>
-      <span>Pricing of</span>
-      <span>Our Agency</span>
+        <div class="item">
+          <p class="grey small">PRICING</p>
+          <span class="flarge">Pricing of</span>
+          <span class="flarge">Our Agency</span>
+        </div>
       <div class="l-packing">
 
         <div class="pack">
-          <p>Starter pack</p>
+          <p class="fmedium">Starter pack</p>
           <ul class="grey">
             <li>Trip</li>
             <li>Hotel</li>
@@ -101,7 +104,7 @@
         </div>
         
         <div class="pack">
-          <p>Luxury pack</p>
+          <p class="fmedium">Luxury pack</p>
           <ul class="grey">
             <li>Starter pack</li>
             <li>Flights</li>
@@ -113,8 +116,18 @@
       </div>
 
       </div>
-      <div class="section "></div>
-     
+      <div class="last header">
+        <p>Are you ready ?</p>
+       <a href="https://www.youtube.com/watch?v=1b_Pk2eU0oY"><button type="submit">Order now</button></a>        
+      </div>
+
+      <div class="footer">
+        <p>logo</p>
+        <div class="logo">
+          <a href="https://www.facebook.com/profile.php?id=100002862072719"><i class="fa-brands fa-square-facebook" style="color: #fff"></i> Facebook</a>
+          <a href="https://www.instagram.com/jaminjamts/"><i class="fa-brands fa-instagram" style="color: #fff;"></i> Instagram</button></a>
+        </div>
+      </div>
     </div>
   <!-- Code injected by live-server -->
 <script>
